Add first example

--- a/OpenMLexamples.ipynb
+++ b/OpenMLexamples.ipynb
@@ -69,6 +69,26 @@
             ],
             "outputs": [],
             "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 10,
+            "source": [
+                "# Publish the experiment on OpenML (optional, requires an API key.\r\n",
+                "# You can get your own API key by signing up to OpenML.org)\r\n",
+                "run.publish()\r\n",
+                "print(f'View the run online: {run.openml_url}')"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "View the run online: https://www.openml.org/r/10560605\n"
+                    ]
+                }
+            ],
+            "metadata": {}
         }
     ],
     "metadata": {
