--- a/OpenML/20_basic/introduction_tutorial.ipynb
+++ b/OpenML/20_basic/introduction_tutorial.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "source": [
         "%matplotlib inline"
       ],
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "source": [
         "# License: BSD 3-Clause\r\n",
         "\r\n",
@@ -108,11 +108,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "source": [
         "openml.config.start_using_configuration_for_example()"
       ],
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "C:\\tools\\Anaconda3\\envs\\openml\\lib\\site-packages\\openml\\config.py:177: UserWarning: Switching to the test server https://test.openml.org/api/v1/xml to not upload results to the live server. Using the test server may result in reduced performance of the API!\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "metadata": {
         "collapsed": false
       }
@@ -129,10 +138,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "source": [
-        "import apis\r\n",
-        "openml.config.apikey = apis.API_Key"
+        "#import apis\r\n",
+        "#openml.config.apikey = apis.API_Key"
       ],
       "outputs": [],
       "metadata": {
@@ -180,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "source": [
         "task = openml.tasks.get_task(403)\r\n",
         "data = openml.datasets.get_dataset(task.dataset_id)\r\n",
@@ -192,7 +201,15 @@
         "myrun = run.publish()\r\n",
         "print(f\"kNN on {data.name}: {myrun.openml_url}\")"
       ],
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kNN on eeg-eye-state: https://test.openml.org/r/126105\n"
+          ]
+        }
+      ],
       "metadata": {
         "collapsed": false
       }
