--- a/Comp/loan/notebook.ipynb
+++ b/Comp/loan/notebook.ipynb
@@ -2,9 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
    "source": [
     "<a href=\"datacamp.com/workspacecompetition\" target=\"_blank\">![banner](banner.png)</a>\n",
     "\n",
@@ -12,49 +9,84 @@
     "\n",
     "Ready to put your coding skills to the test? Join us for our Workspace Competition.  \n",
     "For more information, visit [datacamp.com/workspacecompetition](https://datacamp.com/workspacecompetition) "
-   ]
+   ],
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Context\n",
     "This dataset ([source](https://www.kaggle.com/itssuru/loan-data)) consists of data from almost 10,000 borrowers that took loans - with some paid back and others still in progress. It was extracted from lendingclub.com which is an organization that connects borrowers with investors. We've included a few suggested questions at the end of this template to help you get started."
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "# Load packages\r\n",
+    "import numpy as np \r\n",
+    "import pandas as pd "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Load your data"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load packages\n",
-    "import numpy as np \n",
-    "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load your data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+    "# Load data from the csv file\r\n",
+    "df = pd.read_csv('loan_data.csv', index_col=None)\r\n",
+    "\r\n",
+    "# Change the dots in the column names to underscores\r\n",
+    "df.columns = [c.replace(\".\", \"_\") for c in df.columns]\r\n",
+    "print(f\"Number of rows/records: {df.shape[0]}\")\r\n",
+    "print(f\"Number of columns/variables: {df.shape[1]}\")\r\n",
+    "df.head()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Number of rows/records: 9578\n",
       "Number of columns/variables: 14\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "   credit_policy             purpose  int_rate  installment  log_annual_inc  \\\n",
+       "0              1  debt_consolidation    0.1189       829.10       11.350407   \n",
+       "1              1         credit_card    0.1071       228.22       11.082143   \n",
+       "2              1  debt_consolidation    0.1357       366.86       10.373491   \n",
+       "3              1  debt_consolidation    0.1008       162.34       11.350407   \n",
+       "4              1         credit_card    0.1426       102.92       11.299732   \n",
+       "\n",
+       "     dti  fico  days_with_cr_line  revol_bal  revol_util  inq_last_6mths  \\\n",
+       "0  19.48   737        5639.958333      28854        52.1               0   \n",
+       "1  14.29   707        2760.000000      33623        76.7               0   \n",
+       "2  11.63   682        4710.000000       3511        25.6               1   \n",
+       "3   8.10   712        2699.958333      33667        73.2               1   \n",
+       "4  14.97   667        4066.000000       4740        39.5               0   \n",
+       "\n",
+       "   delinq_2yrs  pub_rec  not_fully_paid  \n",
+       "0            0        0               0  \n",
+       "1            0        0               0  \n",
+       "2            0        0               0  \n",
+       "3            0        0               0  \n",
+       "4            1        0               0  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -179,60 +211,91 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   credit_policy             purpose  int_rate  installment  log_annual_inc  \\\n",
-       "0              1  debt_consolidation    0.1189       829.10       11.350407   \n",
-       "1              1         credit_card    0.1071       228.22       11.082143   \n",
-       "2              1  debt_consolidation    0.1357       366.86       10.373491   \n",
-       "3              1  debt_consolidation    0.1008       162.34       11.350407   \n",
-       "4              1         credit_card    0.1426       102.92       11.299732   \n",
-       "\n",
-       "     dti  fico  days_with_cr_line  revol_bal  revol_util  inq_last_6mths  \\\n",
-       "0  19.48   737        5639.958333      28854        52.1               0   \n",
-       "1  14.29   707        2760.000000      33623        76.7               0   \n",
-       "2  11.63   682        4710.000000       3511        25.6               1   \n",
-       "3   8.10   712        2699.958333      33667        73.2               1   \n",
-       "4  14.97   667        4066.000000       4740        39.5               0   \n",
-       "\n",
-       "   delinq_2yrs  pub_rec  not_fully_paid  \n",
-       "0            0        0               0  \n",
-       "1            0        0               0  \n",
-       "2            0        0               0  \n",
-       "3            0        0               0  \n",
-       "4            1        0               0  "
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
-   "source": [
-    "# Load data from the csv file\n",
-    "df = pd.read_csv('loan_data.csv', index_col=None)\n",
-    "\n",
-    "# Change the dots in the column names to underscores\n",
-    "df.columns = [c.replace(\".\", \"_\") for c in df.columns]\n",
-    "print(f\"Number of rows/records: {df.shape[0]}\")\n",
-    "print(f\"Number of columns/variables: {df.shape[1]}\")\n",
-    "df.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Understand your variables"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 3,
+   "source": [
+    "# Understand your variables\r\n",
+    "variables = pd.DataFrame(columns=['Variable','Number of unique values','Values'])\r\n",
+    "\r\n",
+    "for i, var in enumerate(df.columns):\r\n",
+    "    variables.loc[i] = [var, df[var].nunique(), df[var].unique().tolist()]\r\n",
+    "    \r\n",
+    "# Join with the variables dataframe\r\n",
+    "var_dict = pd.read_csv('variable_explanation.csv', index_col=0)\r\n",
+    "variables.set_index('Variable').join(var_dict)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "                  Number of unique values  \\\n",
+       "Variable                                    \n",
+       "credit_policy                           2   \n",
+       "purpose                                 7   \n",
+       "int_rate                              249   \n",
+       "installment                          4788   \n",
+       "log_annual_inc                       1987   \n",
+       "dti                                  2529   \n",
+       "fico                                   44   \n",
+       "days_with_cr_line                    2687   \n",
+       "revol_bal                            7869   \n",
+       "revol_util                           1035   \n",
+       "inq_last_6mths                         28   \n",
+       "delinq_2yrs                            11   \n",
+       "pub_rec                                 6   \n",
+       "not_fully_paid                          2   \n",
+       "\n",
+       "                                                              Values  \\\n",
+       "Variable                                                               \n",
+       "credit_policy                                                 [1, 0]   \n",
+       "purpose            [debt_consolidation, credit_card, all_other, h...   \n",
+       "int_rate           [0.1189, 0.1071, 0.1357, 0.1008, 0.1426, 0.078...   \n",
+       "installment        [829.1, 228.22, 366.86, 162.34, 102.92, 125.13...   \n",
+       "log_annual_inc     [11.35040654, 11.08214255, 10.37349118, 11.299...   \n",
+       "dti                [19.48, 14.29, 11.63, 8.1, 14.97, 16.98, 4.0, ...   \n",
+       "fico               [737, 707, 682, 712, 667, 727, 722, 677, 662, ...   \n",
+       "days_with_cr_line  [5639.958333, 2760.0, 4710.0, 2699.958333, 406...   \n",
+       "revol_bal          [28854, 33623, 3511, 33667, 4740, 50807, 3839,...   \n",
+       "revol_util         [52.1, 76.7, 25.6, 73.2, 39.5, 51.0, 76.8, 68....   \n",
+       "inq_last_6mths     [0, 1, 2, 3, 4, 5, 6, 8, 7, 33, 9, 18, 14, 15,...   \n",
+       "delinq_2yrs                      [0, 1, 2, 4, 3, 5, 6, 13, 7, 8, 11]   \n",
+       "pub_rec                                           [0, 1, 2, 3, 4, 5]   \n",
+       "not_fully_paid                                                [0, 1]   \n",
+       "\n",
+       "                                                         Explanation  \n",
+       "Variable                                                              \n",
+       "credit_policy      1 if the customer meets the credit underwritin...  \n",
+       "purpose                                     The purpose of the loan.  \n",
+       "int_rate           The interest rate of the loan (more risky borr...  \n",
+       "installment        The monthly installments owed by the borrower ...  \n",
+       "log_annual_inc     The natural log of the self-reported annual in...  \n",
+       "dti                The debt-to-income ratio of the borrower (amou...  \n",
+       "fico                          The FICO credit score of the borrower.  \n",
+       "days_with_cr_line  The number of days the borrower has had a cred...  \n",
+       "revol_bal          The borrower's revolving balance (amount unpai...  \n",
+       "revol_util         The borrower's revolving line utilization rate...  \n",
+       "inq_last_6mths     The borrower's number of inquiries by creditor...  \n",
+       "delinq_2yrs        The number of times the borrower had been 30+ ...  \n",
+       "pub_rec            The borrower's number of derogatory public rec...  \n",
+       "not_fully_paid         1 if the loan is not fully paid; 0 otherwise.  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -351,80 +414,16 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                  Number of unique values  \\\n",
-       "Variable                                    \n",
-       "credit_policy                           2   \n",
-       "purpose                                 7   \n",
-       "int_rate                              249   \n",
-       "installment                          4788   \n",
-       "log_annual_inc                       1987   \n",
-       "dti                                  2529   \n",
-       "fico                                   44   \n",
-       "days_with_cr_line                    2687   \n",
-       "revol_bal                            7869   \n",
-       "revol_util                           1035   \n",
-       "inq_last_6mths                         28   \n",
-       "delinq_2yrs                            11   \n",
-       "pub_rec                                 6   \n",
-       "not_fully_paid                          2   \n",
-       "\n",
-       "                                                              Values  \\\n",
-       "Variable                                                               \n",
-       "credit_policy                                                 [1, 0]   \n",
-       "purpose            [debt_consolidation, credit_card, all_other, h...   \n",
-       "int_rate           [0.1189, 0.1071, 0.1357, 0.1008, 0.1426, 0.078...   \n",
-       "installment        [829.1, 228.22, 366.86, 162.34, 102.92, 125.13...   \n",
-       "log_annual_inc     [11.35040654, 11.08214255, 10.37349118, 11.299...   \n",
-       "dti                [19.48, 14.29, 11.63, 8.1, 14.97, 16.98, 4.0, ...   \n",
-       "fico               [737, 707, 682, 712, 667, 727, 722, 677, 662, ...   \n",
-       "days_with_cr_line  [5639.958333, 2760.0, 4710.0, 2699.958333, 406...   \n",
-       "revol_bal          [28854, 33623, 3511, 33667, 4740, 50807, 3839,...   \n",
-       "revol_util         [52.1, 76.7, 25.6, 73.2, 39.5, 51.0, 76.8, 68....   \n",
-       "inq_last_6mths     [0, 1, 2, 3, 4, 5, 6, 8, 7, 33, 9, 18, 14, 15,...   \n",
-       "delinq_2yrs                      [0, 1, 2, 4, 3, 5, 6, 13, 7, 8, 11]   \n",
-       "pub_rec                                           [0, 1, 2, 3, 4, 5]   \n",
-       "not_fully_paid                                                [0, 1]   \n",
-       "\n",
-       "                                                         Explanation  \n",
-       "Variable                                                              \n",
-       "credit_policy      1 if the customer meets the credit underwritin...  \n",
-       "purpose                                     The purpose of the loan.  \n",
-       "int_rate           The interest rate of the loan (more risky borr...  \n",
-       "installment        The monthly installments owed by the borrower ...  \n",
-       "log_annual_inc     The natural log of the self-reported annual in...  \n",
-       "dti                The debt-to-income ratio of the borrower (amou...  \n",
-       "fico                          The FICO credit score of the borrower.  \n",
-       "days_with_cr_line  The number of days the borrower has had a cred...  \n",
-       "revol_bal          The borrower's revolving balance (amount unpai...  \n",
-       "revol_util         The borrower's revolving line utilization rate...  \n",
-       "inq_last_6mths     The borrower's number of inquiries by creditor...  \n",
-       "delinq_2yrs        The number of times the borrower had been 30+ ...  \n",
-       "pub_rec            The borrower's number of derogatory public rec...  \n",
-       "not_fully_paid         1 if the loan is not fully paid; 0 otherwise.  "
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
-   "source": [
-    "# Understand your variables\n",
-    "variables = pd.DataFrame(columns=['Variable','Number of unique values','Values'])\n",
-    "\n",
-    "for i, var in enumerate(df.columns):\n",
-    "    variables.loc[i] = [var, df[var].nunique(), df[var].unique().tolist()]\n",
-    "    \n",
-    "# Join with the variables dataframe\n",
-    "var_dict = pd.read_csv('variable_explanation.csv', index_col=0)\n",
-    "variables.set_index('Variable').join(var_dict)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now you can start to explore this dataset with the chance to win incredible prices! Can't think of where to start? Try your hand at these suggestions:\n",
     "\n",
@@ -432,20 +431,20 @@
     "- Find out how long it takes for users to pay back their loan.\n",
     "- Build a model that can predict the probability a user will be able to pay back their loan within a certain period.\n",
     "- Find out what kind of people take a loan for what purposes."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Start coding "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Judging Criteria\n",
     "| CATEGORY | WEIGHTAGE | DETAILS                                                              |\n",
@@ -453,14 +452,15 @@
     "| **Analysis** | 30%       | <ul><li>Documentation on the goal and what was included in the analysis</li><li>How the question was approached</li><li>Visualisation tools and techniques utilized</li></ul>       |\n",
     "| **Results**  | 30%       | <ul><li>How the results derived related to the problem chosen</li><li>The ability to trigger potential further analysis</li></ul> |\n",
     "| **Creativity** | 40% | <ul><li>How \"out of the box\" the analysis conducted is</li><li>Whether the publication is properly motivated and adds value</li></ul> |"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -469,9 +469,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.6.13 64-bit ('dsfs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -483,7 +482,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.13"
+  },
+  "interpreter": {
+   "hash": "fa1003e52c69e48018e7fa6cb82dbdd1de56fa35c31bfbf5b600bc5b25ca4fca"
   }
  },
  "nbformat": 4,
